--- a/i3/config
+++ b/i3/config
@@ -42,5 +42,13 @@ set $zukice exec zukice
 #bindsym Mod4+Print exec scrot --file ~/screenshot/ps_$(date +"%Y%m%d%H%M%S").png
 #bindsym Mod4+Shift+Print exec flameshot gui
 
+
+bar {
+    mode hide
+    hidden_state hide
+    modifier Mod5
+    status_command i3status
+}
 bindsym Mod4+Shift+s exec xset dpms force standby
+
 include ~/.config/i3sway/config
