--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -37,7 +37,8 @@ monitor=DP-3,2560x1440@164.94Hz,auto,auto
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
-$menu = wofi --show drun
+#$menu = wofi --show drun
+$menu = bemenu-run -c -l 10 -W 0.15 -B 4
 
 
 #################
