--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -61,7 +61,23 @@ $menu = bemenu-run -c -l 10 -W 0.15 -B 4
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
+env = MOZ_ENABLE_WAYLAND,1 
 
+
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
+
+#nvidia moment
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
+
+cursor {
+    no_hardware_cursors = true
+}
 
 #####################
 ### LOOK AND FEEL ###
