--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -168,7 +168,7 @@ misc {
 
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
-    kb_layout = us
+    kb_layout = gb
     kb_variant =
     kb_model =
     kb_options =
