rebind basic bindings to my prefrences

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -204,12 +204,12 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
-bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, R, exec, $menu
+bind = $mainMod, Escape, exit,
+bind = $mainMod, Return, exec, $terminal
+bind = $mainMod, d, exec, $menu
+bind = $mainMod, Q, killactive,
+bind = $mainMod, S, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
