add gaming mode, script copied from hyprland wiki

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -210,6 +210,8 @@ bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, d, exec, $menu
 bind = $mainMod, Q, killactive,
 bind = $mainMod, S, togglefloating,
+bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
+bind = $mainMod, F2, exec, hyprctl reload
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
