disable filemanager bind for now

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -204,14 +204,17 @@ device {
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Escape, exit,
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, d, exec, $menu
 bind = $mainMod, Q, killactive,
 bind = $mainMod, S, togglefloating,
+
+
 bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 bind = $mainMod, F2, exec, hyprctl reload
+#bind = $mainMod, E, exec, $fileManager
+
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
