enable dunst and showtime bind

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -51,7 +51,7 @@ $menu = bemenu-run -c -l 10 -W 0.15 -B 4
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
-
+exec-once = dunst
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -260,6 +260,8 @@ bind = $mainMod, mouse_up, workspace, e-1
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Show current time bind since I don't use a bar
+bind = $mainMod, w, exec, dunstify "time" "$(date)" -r 7000
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
