--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -203,7 +203,9 @@ device {
 # See https://wiki.hyprland.org/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 
-# Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
+# https://wiki.hyprland.org/Configuring/Binds/ 
+# Basic binds
+
 bind = $mainMod, Escape, exit,
 bind = $mainMod, Return, exec, $terminal
 bind = $mainMod, d, exec, $menu
@@ -211,8 +213,6 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, S, togglefloating,
 
 
-bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
-bind = $mainMod, F2, exec, hyprctl reload
 #bind = $mainMod, E, exec, $fileManager
 
 bind = $mainMod, P, pseudo, # dwindle
@@ -262,6 +262,11 @@ bindm = $mainMod, mouse:273, resizewindow
 
 # Show current time bind since I don't use a bar
 bind = $mainMod, w, exec, dunstify "time" "$(date)" -r 7000
+
+# Gaming script and reset bind
+bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
+bind = $mainMod, F2, exec, hyprctl reload
+
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
 bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
