disable layout binds for now(never use them)

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -215,8 +215,8 @@ bind = $mainMod, S, togglefloating,
 
 #bind = $mainMod, E, exec, $fileManager
 
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+#bind = $mainMod, P, pseudo, # dwindle
+#bind = $mainMod, J, togglesplit, # dwindle
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
