add steam window rule

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -282,10 +282,5 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule v1
-# windowrule = float, ^(kitty)$
-
-# Example windowrule v2
-# windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
-
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+# taken from here https://github.com/hyprwm/Hyprland/issues/7661#issuecomment-2335123700
+windowrulev2 = float, class:(team)$, title:^(?!Steam$).*$
