--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -263,6 +263,9 @@ bindm = $mainMod, mouse:273, resizewindow
 # Show current time bind since I don't use a bar
 bind = $mainMod, w, exec, dunstify "time" "$(date)" -r 7000
 
+# Show title and class of window to make things simple
+bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|title" | cut -c 2-)"
+
 # Gaming script and reset bind
 bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 bind = $mainMod, F2, exec, hyprctl reload
