--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -52,7 +52,7 @@ $menu = bemenu-run -c -l 10 -W 0.15 -B 4
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
 exec-once = dunst
-
+exec-once = gammastep
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
