--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@
 !Kvantum/
 !Epic/PortalWars/
 !yazi/
+!fastfetch
+!gammastep
 qutebrowser/greasemonkey/disable/deadname.js
 git/credentials
 SideQuest
