--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -59,8 +59,9 @@ exec-once = gammastep
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_THEME="Adwaita"
+env = XCURSOR_SIZE,30
+env = HYPRCURSOR_SIZE,30
 env = MOZ_ENABLE_WAYLAND,1 
 
 
