switch to using my launch script and switch bear bemenu-run to a fallback

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -38,8 +38,9 @@ monitor=DP-3,2560x1440@164.94Hz,auto,auto
 $terminal = kitty
 $fileManager = dolphin
 #$menu = wofi --show drun
-$menu = bemenu-run -c -l 10 -W 0.15 -B 4
 
+#$menu = bemenu-run -c -l 10 -W 0.15 -B 4
+$menu = launchscript bemenu -c -l 10 -W 0.15 -B 4 || bemenu-run -c -l 10 -W 0.15 -B 4
 
 #################
 ### AUTOSTART ###
