--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -217,6 +217,8 @@ bind = $mainMod, S, togglefloating,
 
 #bind = $mainMod, E, exec, $fileManager
 
+bind=SUPER,F,fullscreen
+
 #bind = $mainMod, P, pseudo, # dwindle
 #bind = $mainMod, J, togglesplit, # dwindle
 
