--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -228,6 +228,12 @@ bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+# Move windows with mainMod + arrow keys
+bind = $mainMod&Shift, left, movewindow, l
+bind = $mainMod&Shift, right, movewindow, r
+bind = $mainMod&Shift, up, movewindow, u
+bind = $mainMod&Shift, down, movewindow, d
+
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
