bind monitor workspaces

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,6 +32,21 @@ monitor=$mainmonitor,2560x1440@164.94Hz,auto,auto
 
 monitor=$secondmonitor,1920x1080,auto-left,auto
 
+##########################
+### MONITOR WORKSPACES ###
+##########################
+
+
+workspace = 1,monitor:$mainmonitor
+workspace = 2,monitor:$mainmonitor
+workspace = 3,monitor:$mainmonitor
+workspace = 4,monitor:$mainmonitor
+workspace = 5,monitor:$mainmonitor
+workspace = 6,monitor:$secondmonitor
+workspace = 7,monitor:$secondmonitor
+workspace = 8,monitor:$secondmonitor
+workspace = 9,monitor:$secondmonitor
+workspace = 10,monitor:$secondmonitor
 
 
 ###################
