--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -280,8 +280,8 @@ bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-bind = $mainMod, j, togglespecialworkspace, magic
-bind = $mainMod SHIFT, j, movetoworkspace, special:magic
+#bind = $mainMod, j, togglespecialworkspace, magic
+#bind = $mainMod SHIFT, j, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
