add a simple terminal scratchpad

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -283,6 +283,7 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 #bind = $mainMod, j, togglespecialworkspace, magic
 #bind = $mainMod SHIFT, j, movetoworkspace, special:magic
 
+bind = $mainMod, x, togglespecialworkspace, termscratchpad
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
@@ -318,3 +319,7 @@ bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
 # taken from here https://github.com/hyprwm/Hyprland/issues/7661#issuecomment-2335123700
 windowrulev2 = float, class:(team)$, title:^(?!Steam$).*$
+#############################
+### SCRATCHPAD WORKSPACES ###
+#############################
+workspace = special:termscratchpad, gapsin:0, gapsout:50,on-created-empty:[noblur]kitty -o background_opacity=0.4 # --class hyprScratchpadTerminal
