--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -165,6 +165,7 @@ animations {
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
+    animation = specialWorkspace, 1, 3, default, fade
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
