add mod+z bind for pining windows

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -241,6 +241,9 @@ bind = $mainMod, S, togglefloating,
 
 bind=SUPER,F,fullscreen
 
+bind=$mainMod,z,pin,active
+
+
 #bind = $mainMod, P, pseudo, # dwindle
 #bind = $mainMod, J, togglesplit, # dwindle
 
