--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -297,7 +297,7 @@ bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
 # Show current time bind since I don't use a bar
-bind = $mainMod, w, exec, dunstify "time" "$(date)" -r 7000
+binde = $mainMod, w, exec,dunstify -h string:x-dunst-stack-tag:test "time" "$(date)" -t 5000
 
 # Show title and class of window to make things simple
 bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|title" | cut -c 2-)"
