add exec for switching starting workspace to workspace 1

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -75,6 +75,7 @@ $menu = launchscript bemenu -c -l 10 -W 0.15 -B 4 || bemenu-run -c -l 10 -W 0.15
 # exec-once = waybar & hyprpaper & firefox
 exec-once = dunst
 exec-once = gammastep
+exec-once = hyprctl dispatch workspace 1 # this is to force my mouse onto my main display at startup
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
