--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -288,10 +288,17 @@ bind = $mainMod SHIFT, 0, movetoworkspace, 10
 #bind = $mainMod, j, togglespecialworkspace, magic
 #bind = $mainMod SHIFT, j, movetoworkspace, special:magic
 
+
 bind = $mainMod, x, togglespecialworkspace, termscratchpad
+
+
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
 bind = $mainMod, mouse_up, workspace, e-1
+
+# disable monitor
+bind = $mainMod, grave,exec,~/.config/hypr/monitor_disable.sh $secondmonitor
+#bind = $mainMod, grave,exec,hyprctl keyword monitor "$secondmonitor , enable && sleep 1 && hyprctl reload"
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
