add hyprpaper to config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -73,6 +73,7 @@ $menu = launchscript bemenu -c -l 10 -W 0.15 -B 4 || bemenu-run -c -l 10 -W 0.15
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once = hyprpaper
 exec-once = dunst
 exec-once = gammastep
 exec-once = hyprctl dispatch workspace 1 # this is to force my mouse onto my main display at startup
