add dependencies list, not sure about this but might help after config becomes bloated

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -2,7 +2,13 @@
 # https://wiki.hyprland.org/Configuring/Configuring-Hyprland/
 
 ####################
+### dependencies ###
+####################
+#dependencies listed here may just be programs that are called and not real nessasary programs
 
+# kitty : terminal app of choice
+# dunst : notifcation daemon, may switch to mako if I ever feel like it
+# 
 
 
 
