fix bind using "SUPER" Instead of  "$mainMod"

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -235,7 +235,7 @@ bind = $mainMod, S, togglefloating,
 
 #bind = $mainMod, E, exec, $fileManager
 
-bind=SUPER,F,fullscreen
+bind=$mainMod,F,fullscreen
 
 bind=$mainMod,z,pin,active
 
