add browser bind

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -52,8 +52,8 @@ workspace = 10,monitor:$secondmonitor
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
+$browser = firefox
 #$menu = wofi --show drun
-
 #$menu = bemenu-run -c -l 10 -W 0.15 -B 4
 $menu = launchscript bemenu -c -l 10 -W 0.15 -B 4 || bemenu-run -c -l 10 -W 0.15 -B 4
 
@@ -233,7 +233,7 @@ bind = $mainMod, Q, killactive,
 bind = $mainMod, S, togglefloating,
 
 
-#bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, $browser
 
 bind=$mainMod,F,fullscreen
 
