add firefox as dependencies

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,6 +8,7 @@
 
 # kitty : terminal app of choice
 # dunst : notifcation daemon, may switch to mako if I ever feel like it
+# firefox : browser
 # 
 
 
