add wl-clip-persist to config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -9,7 +9,7 @@
 # kitty : terminal app of choice
 # dunst : notifcation daemon, may switch to mako if I ever feel like it
 # firefox : browser
-# 
+# wl-clip-persist : clipboard tool to keep clipboard content after app close
 
 
 
@@ -70,6 +70,7 @@ $menu = launchscript bemenu -c -l 10 -W 0.15 -B 4 || bemenu-run -c -l 10 -W 0.15
 # exec-once = waybar & hyprpaper & firefox
 exec-once = hyprpaper
 exec-once = dunst
+exec-once = wl-clip-persist --clipboard both
 exec-once = gammastep
 exec-once = hyprctl dispatch workspace 1 # this is to force my mouse onto my main display at startup
 #############################
