add screenshot bind

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -307,6 +307,9 @@ binde = $mainMod, w, exec,dunstify -h string:x-dunst-stack-tag:test "time" "$(da
 # Show title and class of window to make things simple
 bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|title" | cut -c 2-)"
 
+# Screenshot binds
+bind = $mainMod, c, exec, grim -g "$(slurp -d)" - | wl-copy
+#bind = $mainMod, c, exec,grim -g "$(slurp)"
 # Gaming script and reset bind
 bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 bind = $mainMod, F2, exec, hyprctl reload
