--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -7,13 +7,13 @@
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
-        "sway/workspaces",
-        "sway/mode",
-        "sway/scratchpad",
+        "hyprland/workspaces",
+        "hyprland/submap",
+    //    "hyprland/scratchpad",
         "custom/media"
     ],
     "modules-center": [
-        "sway/window"
+        "hyprland/window"
     ],
     "modules-right": [
         "mpd",
@@ -26,7 +26,7 @@
         "temperature",
         "backlight",
         "keyboard-state",
-        "sway/language",
+    //    "hyprland/language",
         "battery",
         "battery#bat2",
         "clock",
