--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -116,7 +116,8 @@
         "tooltip": false
     },
     "memory": {
-        "format": "{}% "
+        "format": "{used}/{total}GiB"
+        //"format": "{}% "
     },
     "temperature": {
         // "thermal-zone": 2,
