add waybar to hyprland config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -10,6 +10,7 @@
 # dunst : notifcation daemon, may switch to mako if I ever feel like it
 # firefox : browser
 # wl-clip-persist : clipboard tool to keep clipboard content after app close
+# waybar : bar of choice
 
 
 
@@ -68,6 +69,7 @@ $menu = launchscript bemenu -c -l 10 -W 0.15 -B 4 || bemenu-run -c -l 10 -W 0.15
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+exec-once = waybar
 exec-once = hyprpaper
 exec-once = dunst
 exec-once = wl-clip-persist --clipboard both
