hyprland: update screenshot binds

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -97,10 +97,13 @@ env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 
-
 cursor {
     no_hardware_cursors = true
 }
+
+# program config
+env = GRIM_DEFAULT_DIR=~/screenshot/
+
 
 #####################
 ### LOOK AND FEEL ###
@@ -311,7 +314,8 @@ bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|t
 
 # Screenshot binds
 bind = $mainMod, c, exec, grim -g "$(slurp -d)" - | wl-copy
-#bind = $mainMod, c, exec,grim -g "$(slurp)"
+bind = $mainMod&Alt, c, exec,grim -g "$(slurp)"
+
 # Gaming script and reset bind
 bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 bind = $mainMod, F2, exec, hyprctl reload
