replace power mode setting with neat poweroff/lock/exit menu

--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -31,7 +31,8 @@
         "battery#bat2",
         "clock",
         "tray",
-        "custom/power"
+        "group/group-power"
+        //"custom/power"
     ],
     // Modules configuration
     // "sway/workspaces": {
@@ -58,6 +59,40 @@
             "locked": "",
             "unlocked": ""
         }
+    },
+    "group/group-power": {
+    "orientation": "inherit",
+    "drawer": {
+        "transition-duration": 500,
+        "children-class": "not-power",
+        "transition-left-to-right": false,
+    },
+        "modules": [
+            "custom/power", // First element is the "group leader" and won't ever be hidden
+            "custom/quit",
+            "custom/lock",
+            "custom/reboot",
+        ]
+    },
+    "custom/quit": {
+        "format": "󰗼 ",
+        "tooltip": false,
+        "on-click": "hyprctl dispatch exit"
+    },
+    "custom/lock": {
+        "format": "󰍁 ",
+        "tooltip": false,
+        "on-click": "swaylock"
+    },
+    "custom/reboot": {
+        "format": "󰜉 ",
+        "tooltip": false,
+        "on-click": "reboot"
+    },
+    "custom/power": {
+        "format": " ",
+        "tooltip": false,
+        "on-click": "shutdown now"
     },
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
