add hjkl move keys

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -250,12 +250,16 @@ bind=$mainMod,z,pin,active
 #bind = $mainMod, P, pseudo, # dwindle
 #bind = $mainMod, J, togglesplit, # dwindle
 
-# Move focus with mainMod + arrow keys
+# Move focus with mainMod + arrow keys OR mainMod + hjkl.
 bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
+bind = $mainMod, h, movefocus, l
+bind = $mainMod, right, movefocus, r
+bind = $mainMod, up, movefocus, u
+bind = $mainMod, down, movefocus, d
 # Move windows with mainMod + arrow keys
 bind = $mainMod&Shift, left, movewindow, l
 bind = $mainMod&Shift, right, movewindow, r
