--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -119,8 +119,14 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    #col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
+    
+    #theming
+    #col.active_border = rgb(6040a0) rgb(742ffc) 45deg
+    col.active_border = rgb(742ffc)
+    col.inactive_border = rgb(542aa8)
+    #col.active_border = rgb(6040a0) rgb(742ffc) 45deg
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = false 
