make reload bind also restart waybar for testing

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -328,7 +328,7 @@ bind = $mainMod&Alt, c, exec,grim -g "$(slurp)"
 
 # Gaming script and reset bind
 bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
-bind = $mainMod, F2, exec, hyprctl reload
+bind = $mainMod, F2, exec, hyprctl reload;pkill waybar;hyprctl dispatch exec waybar 
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
