i3: add forgoten commits

--- a/i3/config
+++ b/i3/config
@@ -2,7 +2,7 @@ set $ipctool i3-msg
 
 #DISPLAY
 exec "systemctl --user import-environment XDG_CURRENT_DESKTOP DISPLAY XAUTHORITY"
-set $mainmon DP-0
+set $mainmon DP-4
 #set $mainmon DP-2
 #set $mainmon DP-1
 set $secmon HDMI-0
@@ -13,7 +13,7 @@ exec_always hsetroot -solid "#1E242D"
 exec X11fixmouse
 #exec picom
 #LOCKSYNTAX
-exec xss-lock --transfer-sleep-lock -- i3lock -i ~/.config/i3sway/lockscreen.png --nofork
+#exec xss-lock --transfer-sleep-lock -- i3lock -i ~/.config/i3sway/lockscreen.png --nofork
 set $lockprogram i3lock -i ~/.config/i3sway/lockscreen.png;exec sleep 3 && xset dpms force standby
 set $locksyntax
 set $lockscreen
@@ -44,9 +44,27 @@ set $zukice exec zukice
 
 
 bar {
+    colors {
+        background #1e242d00
+        #background #000000
+        statusline #ffffff
+        separator #666666
+
+        focused_workspace  #4c7899 #285577 #ffffff
+        active_workspace   #333333 #5f676a #ffffff
+        inactive_workspace #333333 #222222 #888888
+        urgent_workspace   #2f343a #900000 #ffffff
+        binding_mode       #2f343a #900000 #ffffff
+    }
     mode hide
-    hidden_state hide
-    modifier Mod5
+    position top
+    workspace_min_width 20
+
+    ## only show bar when mod key is pressed.
+    #mode hide
+    #hidden_state hide
+    #modifier Mod4
+
     status_command i3status
 }
 bindsym Mod4+Shift+s exec xset dpms force standby
