switch from launchscript to launchscript.py

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -57,7 +57,7 @@ $fileManager = dolphin
 $browser = firefox
 #$menu = wofi --show drun
 #$menu = bemenu-run -c -l 10 -W 0.15 -B 4
-$menu = launchscript bemenu -c -l 10 -W 0.15 -B 4 || bemenu-run -c -l 10 -W 0.15 -B 4
+$menu = launchscript.py || bemenu-run -c -l 10 -W 0.15 -B 4
 
 #################
 ### AUTOSTART ###
