--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -263,9 +263,9 @@ bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
 
 bind = $mainMod, h, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, j, movefocus, r
+bind = $mainMod, k, movefocus, u
+bind = $mainMod, l, movefocus, d
 # Move windows with mainMod + arrow keys
 bind = $mainMod&Shift, left, movewindow, l
 bind = $mainMod&Shift, right, movewindow, r
