add wifi and bluetooth applets

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,7 +11,9 @@
 # firefox : browser
 # wl-clip-persist : clipboard tool to keep clipboard content after app close
 # waybar : bar of choice
-
+# gammastep : bluelight filter
+# nm-applet : networking
+# blueman-applet : bluetooth
 
 
 
@@ -69,6 +71,11 @@ $menu = launchscript.py || bemenu-run -c -l 10 -W 0.15 -B 4
 # exec-once = $terminal
 # exec-once = nm-applet &
 # exec-once = waybar & hyprpaper & firefox
+#applets 
+exec-once = blueman-applet
+exec-once = nm-applet
+
+
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = dunst
