add hyprfreeze.py bind

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -329,6 +329,9 @@ binde = $mainMod, w, exec,dunstify -h string:x-dunst-stack-tag:test "time" "$(da
 # Show title and class of window to make things simple
 bind = $mainMod, p, exec, notify-send "$(hyprctl activewindow | grep -E "class|title" | cut -c 2-)"
 
+# Add hyprfreeze.py bind a bind which freezes the activewindow
+bind = $mainMod&Control, p, exec, notify-send "$(hyprfreeze.py)"
+
 # Screenshot binds
 bind = $mainMod, c, exec, grim -g "$(slurp -d)" - | wl-copy
 bind = $mainMod&Alt, c, exec,grim -g "$(slurp)"
