add null submap for when using xwayland rootfull mode

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -348,6 +348,16 @@ bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
 
+###############
+### SUBMAPS ### 
+###############
+
+# See https://wiki.hyprland.org/Configuring/Binds/#submaps 
+bind = Alt, R, submap, null  
+submap = null 
+bind = SUPER,n,submap, reset
+submap = reset
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
