--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,7 +14,8 @@
 # gammastep : bluelight filter
 # nm-applet : networking
 # blueman-applet : bluetooth
-
+# hypridle : idle daemon
+# hyprlock : screenlocker
 
 
 ################
@@ -78,6 +79,7 @@ exec-once = nm-applet
 
 exec-once = waybar
 exec-once = hyprpaper
+exec-once = hypridle
 exec-once = dunst
 exec-once = wl-clip-persist --clipboard both
 exec-once = gammastep
@@ -339,6 +341,10 @@ bind = $mainMod&Alt, c, exec,grim -g "$(slurp)"
 # Gaming script and reset bind
 bind = $mainMod, F1, exec, ~/.config/hypr/gamemode.sh
 bind = $mainMod, F2, exec, hyprctl reload;pkill waybar;hyprctl dispatch exec waybar 
+
+# screen lock
+bind = $mainMod, BackSpace, exec, hyprlock
+
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
