--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -389,9 +389,13 @@ submap = reset
 
 # taken from here https://github.com/hyprwm/Hyprland/issues/7661#issuecomment-2335123700
 windowrulev2 = float, class:(team)$, title:^(?!Steam$).*$
+
 windowrulev2 = float, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = pin, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = opacity 0.9, class:(firefox), title:(Picture-in-Picture)
+
+windowrulev2 = float, class:(thunar), title:(File Operation Progress)
+
 #############################
 ### SCRATCHPAD WORKSPACES ###
 #############################
