hyprland add theming tools of choice to comments

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,6 +17,11 @@
 # hypridle : idle daemon
 # hyprlock : screenlocker
 
+# qt/gtk theming tools of choice 
+#
+# nwg-tool : gtk themer
+# kvantummanager : qt themer
+
 
 ################
 ### MONITORS ###
