hyprland: vim key moving of windows

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -280,11 +280,19 @@ bind = $mainMod, h, movefocus, l
 bind = $mainMod, j, movefocus, r
 bind = $mainMod, k, movefocus, u
 bind = $mainMod, l, movefocus, d
+
 # Move windows with mainMod + arrow keys
 bind = $mainMod&Shift, left, movewindow, l
 bind = $mainMod&Shift, right, movewindow, r
 bind = $mainMod&Shift, up, movewindow, u
 bind = $mainMod&Shift, down, movewindow, d
+
+
+# Move windows with mainMod + hjkl keys
+bind = $mainMod&Shift, h, movewindow, l
+bind = $mainMod&Shift, l, movewindow, r
+bind = $mainMod&Shift, k, movewindow, u
+bind = $mainMod&Shift, j, movewindow, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
