switch bluelight daemon hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -11,11 +11,11 @@
 # firefox : browser
 # wl-clip-persist : clipboard tool to keep clipboard content after app close
 # waybar : bar of choice
-# gammastep : bluelight filter
 # nm-applet : networking
 # blueman-applet : bluetooth
 # hypridle : idle daemon
 # hyprlock : screenlocker
+# wl-gammarelay : bluelight tool of choice
 
 # qt/gtk theming tools of choice 
 #
@@ -87,7 +87,8 @@ exec-once = hyprpaper
 exec-once = hypridle
 exec-once = dunst
 exec-once = wl-clip-persist --clipboard both
-exec-once = gammastep
+#exec-once = gammastep
+exec-once = wl-gammarelay
 exec-once = hyprctl dispatch workspace 1 # this is to force my mouse onto my main display at startup
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -382,6 +383,14 @@ bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 bindel = ,XF86MonBrightnessUp, exec, brightnessctl s 10%+
 bindel = ,XF86MonBrightnessDown, exec, brightnessctl s 10%-
+
+# add keys for bluelight
+bindel = $mainMod&Control, 0, exec, busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Brightness d 1.0 && busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 6500 
+bindel = $mainMod&Control, minus, exec, busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateTemperature n -100 
+bindel = $mainMod&Control, equal, exec, busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateTemperature n +100 
+bindel = $mainMod&Control, bracketleft, exec, busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateBrightness d -0.02 
+bindel = $mainMod&Control, bracketright, exec, busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateBrightness d +0.02 
+
 
 ###############
 ### SUBMAPS ### 
