add dbus update env exec lines to fix flatpak apps

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -90,6 +90,9 @@ exec-once = wl-clip-persist --clipboard both
 #exec-once = gammastep
 exec-once = wl-gammarelay
 exec-once = hyprctl dispatch workspace 1 # this is to force my mouse onto my main display at startup
+
+exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 #############################
 ### ENVIRONMENT VARIABLES ###
 #############################
