make bemenu not case senstive

--- a/launchscript.toml
+++ b/launchscript.toml
@@ -1,10 +1,11 @@
 # toml document
 [options]
-launcher = "bemenu -c -l 10 -W 0.15 -B 4"
+launcher = "bemenu -c -l 10 -W 0.15 -B 4 -i"
 
 [itemcreate] #creates entry in launchscript.py
 virtual-piano = "$BROWSER https://www.onlinepianist.com/virtual-piano"
 panel-attack = "love $HOME/src/panel-attack"
+
 
 [itemmodify] # modifys entry in launchscript.py
 
