--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -18,6 +18,9 @@
     "modules-right": [
        // "mpd",
         "idle_inhibitor",
+        "custom/wl-gammarelay-temperature", 
+        "custom/wl-gammarelay-brightness",
+        "custom/wl-gammarelay-gamma",
         "pulseaudio",
      //   "network", //unused can just use network systray applet
         "power-profiles-daemon",
@@ -46,6 +49,26 @@
     "on-click-right": "mull_waybar.sh 1 command 'mullvad disconnect'",
     //"exec-if": "test -d /proc/sys/net/ipv4/conf/tun0",
     "interval": 60 
+    },
+   "custom/wl-gammarelay-temperature": {
+        "format": "{} ",
+        "exec": "wl-gammarelay-rs watch {t}",
+        "on-click": "busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 6500",
+        "on-click-right": "busctl --user set-property rs.wl-gammarelay / rs.wl.gammarelay Temperature q 3300",
+        "on-scroll-up": "busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateTemperature n +100",
+        "on-scroll-down": "busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateTemperature n -100"
+    },
+    "custom/wl-gammarelay-brightness": {
+        "format": "{}% ",
+        "exec": "wl-gammarelay-rs watch {bp}",
+        "on-scroll-up": "busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateBrightness d +0.02",
+        "on-scroll-down": "busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateBrightness d -0.02"
+    },
+    "custom/wl-gammarelay-gamma": {
+        "format": "{}% γ",
+        "exec": "wl-gammarelay-rs watch {g}",
+        "on-scroll-up": "busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateGamma d +0.02",
+        "on-scroll-down": "busctl --user -- call rs.wl-gammarelay / rs.wl.gammarelay UpdateGamma d -0.02"
     },
     "hyprland/window": {
         //"icon":true,
