switch to wl-gammarelay-rs

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -15,7 +15,8 @@
 # blueman-applet : bluetooth
 # hypridle : idle daemon
 # hyprlock : screenlocker
-# wl-gammarelay : bluelight tool of choice
+# wl-gammarelay-rs : bluelight tool of choice
+
 
 # qt/gtk theming tools of choice 
 #
@@ -88,7 +89,7 @@ exec-once = hypridle
 exec-once = dunst
 exec-once = wl-clip-persist --clipboard both
 #exec-once = gammastep
-exec-once = wl-gammarelay
+exec-once = wl-gammarelay-rs
 exec-once = hyprctl dispatch workspace 1 # this is to force my mouse onto my main display at startup
 
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
