--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -105,6 +105,7 @@ env = XCURSOR_SIZE,30
 env = HYPRCURSOR_SIZE,30
 env = MOZ_ENABLE_WAYLAND,1 
 
+env = QT_QPA_PLATFORMTHEME,qt5ct:qt6ct
 
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
