make gamescope use gb keyboard layout on hyprland

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -111,6 +111,10 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
+# make nested compositors (gamescope) use my keyboard layout
+env = XKB_DEFAULT_LAYOUT=gb
+
+
 #nvidia moment
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
