add thuar window rule

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -429,7 +429,7 @@ windowrulev2 = float, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = pin, class:(firefox), title:(Picture-in-Picture)
 windowrulev2 = opacity 0.9, class:(firefox), title:(Picture-in-Picture)
 
-windowrulev2 = float, class:(thunar), title:(File Operation Progress)
+windowrulev2 = float, class:(thunar), title:^(File Operation Progress)$
 
 #############################
 ### SCRATCHPAD WORKSPACES ###
