--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -66,7 +66,7 @@ $fileManager = dolphin
 $browser = firefox
 #$menu = wofi --show drun
 #$menu = bemenu-run -c -l 10 -W 0.15 -B 4
-$menu = launchscript.py || bemenu-run -c -l 10 -W 0.15 -B 4
+$menu = launchscript.py #|| bemenu-run -c -l 10 -W 0.15 -B 4 -i
 
 #################
 ### AUTOSTART ###
