--- a/hypr/hypridle.conf
+++ b/hypr/hypridle.conf
@@ -12,5 +12,6 @@ listener {
 }
 listener {
     timeout = 610                            # in seconds.
-    on-timeout = hyprctl dispatch exec hyprlock        # screen off when timeout has passed
+    #on-timeout = hyprctl dispatch exec hyprlock        # screen off when timeout has passed
+    on-timeout = hyprctl dispatch exec swaylock -i ~/.config/wallpaper        # screen off when timeout has passed
 }
