add broken bemenu rule

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -126,7 +126,7 @@ cursor {
 }
 
 # program config
-env = GRIM_DEFAULT_DIR=~/screenshot/
+env = GRIM_DEFAULT_DIR=~/screenshots/
 
 
 #####################
@@ -431,7 +431,13 @@ windowrulev2 = opacity 0.9, class:(firefox), title:(Picture-in-Picture)
 
 windowrulev2 = float, class:(thunar), title:^(File Operation Progress)$
 
+windowrulev2 = noanim, class:(bemenu)
+
 #############################
 ### SCRATCHPAD WORKSPACES ###
 #############################
 workspace = special:termscratchpad, gapsin:0, gapsout:50,on-created-empty:[noblur]kitty -o background_opacity=0.4 # --class hyprScratchpadTerminal
+
+
+debug:disable_logs = false
+
