improve hyprland theming

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -100,13 +100,10 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_THEME="Adwaita"
-env = XCURSOR_SIZE,30
-env = HYPRCURSOR_SIZE,30
+
+
+
 env = MOZ_ENABLE_WAYLAND,1 
-
-env = QT_QPA_PLATFORMTHEME,qt5ct:qt6ct
-
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
@@ -128,6 +125,19 @@ cursor {
 # program config
 env = GRIM_DEFAULT_DIR=~/screenshots/
 
+
+
+##############################
+## Theming vars and extras ###
+##############################
+
+exec-once=hyprctl setcursor Adwaita 30
+env = XCURSOR_THEME="Adwaita"
+env = XCURSOR_SIZE,30
+env = HYPRCURSOR_SIZE,30
+
+env = QT_QPA_PLATFORMTHEME,qt5ct:qt6ct
+exec-once=gsettings set org.gnome.desktop.interface gtk-theme 'Arc-Dark'
 
 #####################
 ### LOOK AND FEEL ###
