disable second mon

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -32,10 +32,10 @@
 #monitor= desc:description: Microstep MSI G272CQP,2560x1440@164.94Hz,auto,auto
 
 $mainmonitor=DP-4
-$secondmonitor=HDMI-A-1
+#$secondmonitor=HDMI-A-1
 monitor=$mainmonitor,2560x1440@164.94Hz,auto,auto
 
-monitor=$secondmonitor,1920x1080,auto-left,auto
+#monitor=$secondmonitor,1920x1080,auto-left,auto
 
 ##########################
 ### MONITOR WORKSPACES ###
